--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -50,6 +50,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:name="de.ckitte.tutorial01.myFragment"
             android:id="@+id/fragment" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtIntroText"/>
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtIntroText"
+            android:layout_marginTop="40dp" app:layout_constraintHorizontal_bias="0.105"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
